// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Checked story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="checkbox__input"
        id=":r1:"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
    <label
      class="label label--lg"
      for=":r1:"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Default story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        id=":r0:"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
    <label
      class="label label--lg"
      for=":r0:"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Disabled story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <table
    style="border-spacing: 2rem;"
  >
    <tbody>
      <tr>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper input__wrapper--disabled"
            >
              <input
                class="checkbox__input"
                disabled=""
                id=":r5:"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon checkbox__icon--disabled"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg label--disabled"
              for=":r5:"
            >
              Disabled
            </label>
          </div>
        </td>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                id=":r6:"
                readonly=""
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              for=":r6:"
            >
              Default
            </label>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper input__wrapper--disabled"
            >
              <input
                checked=""
                class="checkbox__input"
                disabled=""
                id=":r7:"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon checkbox__icon--disabled"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg label--disabled"
              for=":r7:"
            >
              Disabled
            </label>
          </div>
        </td>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                checked=""
                class="checkbox__input"
                id=":r8:"
                readonly=""
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              for=":r8:"
            >
              Default
            </label>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper input__wrapper--disabled"
            >
              <input
                aria-checked="mixed"
                checked=""
                class="checkbox__input"
                disabled=""
                id=":r9:"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon checkbox__icon--disabled"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg label--disabled"
              for=":r9:"
            >
              Disabled
            </label>
          </div>
        </td>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                aria-checked="mixed"
                checked=""
                class="checkbox__input"
                id=":ra:"
                readonly=""
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              for=":ra:"
            >
              Default
            </label>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Checkbox /> Disabled story renders snapshot 2`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper input__wrapper--disabled"
  >
    <input
      class="checkbox__input"
      disabled=""
      id=":rl:"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="icon checkbox__icon checkbox__icon--disabled"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
      />
    </svg>
  </span>
  <label
    class="label label--lg label--disabled"
    for=":rl:"
  >
    Disabled
  </label>
</div>
`;

exports[`<Checkbox /> Indeterminate story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-checked="mixed"
        checked=""
        class="checkbox__input"
        id=":r4:"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
    <label
      class="label label--lg"
      for=":r4:"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> LongLabels story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="longlabels--grid"
  >
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          id=":rh:"
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--lg"
        for=":rh:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          id=":ri:"
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--md checkbox__label--md"
        for=":ri:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper input__wrapper--disabled"
      >
        <input
          class="checkbox__input"
          disabled=""
          id=":rj:"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon checkbox__icon--disabled"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--lg label--disabled"
        for=":rj:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper input__wrapper--disabled"
      >
        <input
          class="checkbox__input"
          disabled=""
          id=":rk:"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon checkbox__icon--disabled"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--md label--disabled checkbox__label--md"
        for=":rk:"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Medium story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        id=":r2:"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
    <label
      class="label label--md checkbox__label--md"
      for=":r2:"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> MediumChecked story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="checkbox__input"
        id=":r3:"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
    <label
      class="label label--md checkbox__label--md"
      for=":r3:"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> WithCustomPositioning story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    style="display: flex; align-items: center;"
  >
    <label
      class="label label--lg"
      for="test"
    >
      Label on Left
    </label>
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        id="test"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`<Checkbox /> WithoutVisibleLabel story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-label="a checkbox has no name"
        class="checkbox__input"
        id=":rb:"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        id=":rc:"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-checked="mixed"
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        id=":rd:"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        aria-label="a checkbox has no name"
        class="checkbox__input"
        disabled=""
        id=":re:"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon checkbox__icon--disabled"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        disabled=""
        id=":rf:"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon checkbox__icon--disabled"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        aria-checked="mixed"
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        disabled=""
        id=":rg:"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon checkbox__icon--disabled"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
